--- a/index.html
+++ b/index.html
@@ -485,6 +485,8 @@ div.tocify {
 </div>
 
 
+<div id="syllabus" class="section level2">
+<h2>Syllabus</h2>
 <p><strong>Instructors:</strong> Tadashi Fukami and Jes Coyle</p>
 <p><strong>Students:</strong></p>
 <p><strong>Course Goals:</strong></p>
@@ -499,6 +501,7 @@ div.tocify {
 <p>During the first few weeks, each student will briefly introduce their research question and data and we will go over basics of how to use R and interact with the course content on this website using R markdown files and GitHub. From then on, one selected topic will be covered during each class. First the instructor will briefly summarize the assigned reading (~15 min) and go over key concepts and analyses, R packages and how they should be used, how to differentiate among them, including time for questions and clarification. Then, a student will present an example of the topic (~15 min). This could be (1) going over an example presented in the text by walking through the procedure and details of the code that they think are important; or (2) applying these techniques to the student’s own data and walking others through the analysis, and present on their results/challenges faced, etc. Each class concludes with a ~20-min discussion led by the student (who will come prepared with questions to facilitate discussion and will share novel/important/interesting functions and pieces of R code). Each student will lead 1 or 2 topics during the quarter. We will also have a mid-term and final presentation and discussion on student projects. Students will prepare their lesson content ahead of time by modifying the Rmarkdown webpage on this site.</p>
 <p><strong>Final product:</strong></p>
 <p>Each student will complete the results section to include in a paper to submit for publication or data collection plans for a research proposal.</p>
+</div>
 <div id="tentative-schedule" class="section level2">
 <h2>Tentative Schedule</h2>
 <table>
@@ -766,7 +769,9 @@ div.tocify {
 </div>
 <div id="before-class" class="section level2">
 <h2>Before Class</h2>
-<p>Before the first class please read through the <a href="00-computer-setup.html">computer setup instructions</a> that walk you throgh how to set up your computer to run R, Rstudio and git. Even if you have these programs already installed, make sure to check that you are running the latest versions of R and RStudio (which the instructions will tell you how to do).</p>
+<p>Before the first class please read through the <a href="00-computer-setup.html">computer setup instructions</a> that walk you throgh how to set up your computer to run R and Rstudio. Even if you have these programs already installed, make sure to check that you are running the latest versions of R and RStudio (which the instructions will tell you how to do).</p>
+<p>Our course website runs from a repository on GitHub. You can view this repository <a href="https://github.com/jescoyle/BIO202">here</a>. Notice that the repository has 2 files for each lesson webpage (named 00-lesson-topic), one is an html file (.html) that is displayed as a webpage while the other is a R markdown (.Rmd) file that will allow us to write R code and explanatory text in the same file. The html file is created by R Studio from the R markdown file. The repository also as a folder called “data”. This is where we will put data files used by our example code. Note that this repository can be downloaded by anyone on the internet. If you have data that you wish to use in class but do not wish to share with the entire WWW, you are welcome to email the data files to the rest of the class prior to your lesson.</p>
+<p>During class you will be editing the course webpages to include R code for the lesson discussion that you lead. If you are familiar with git and have a GitHub account, you should fork the repository to your account so that you can make changes there. If that is gibberish to you- don’t worry! You can either choose to edit the course webpages by downloading them and emailing any edits to Jes (see <a href="00-computer-setup.html">computer setup instructions</a>) or you can choose to learn a little git and create you own GitHub account during an optional class session during the first week.</p>
 </div>
 <div id="references-readings" class="section level2">
 <h2>References &amp; Readings</h2>
