--- a/index.html
+++ b/index.html
@@ -521,150 +521,150 @@ div.tocify {
 <td>Mon</td>
 <td>Sept. 25</td>
 <td>Intro to R &amp; RStudio</td>
-<td></td>
-<td></td>
+<td>Tad</td>
+<td>XXX</td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Wed</td>
 <td>Sept. 27</td>
-<td>Topic selection &amp; R markdown</td>
-<td></td>
-<td></td>
+<td>Topic selection, Intro to R markdown &amp; class website</td>
+<td>Jes</td>
+<td>XXX</td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Fri</td>
 <td>Sept. 29</td>
 <td>Intro to ggplot2</td>
-<td></td>
-<td></td>
+<td>Jes</td>
+<td>XXX</td>
 </tr>
 <tr class="even">
 <td>2</td>
 <td>Mon</td>
 <td>Oct. 2</td>
-<td>Intro to GitHub &amp; git</td>
-<td></td>
-<td></td>
+<td>Intro to GitHub &amp; git (optional)</td>
+<td>Jes</td>
+<td>XXX</td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Wed</td>
 <td>Oct. 4</td>
 <td>R workshop</td>
-<td></td>
-<td></td>
+<td>Jes</td>
+<td>XXX</td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Fri</td>
 <td>Oct. 6</td>
-<td>Project introduction</td>
+<td>Each person introduces their questions &amp; data</td>
 <td></td>
-<td></td>
+<td>XXX</td>
 </tr>
 <tr class="odd">
 <td>3</td>
 <td>Mon</td>
 <td>Oct. 9</td>
-<td></td>
-<td></td>
+<td>Topic 1. Data exploration</td>
+<td>Tad</td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Wed</td>
 <td>Oct. 11</td>
-<td></td>
-<td></td>
+<td>Topic 2. Linear models</td>
+<td>Tad</td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Fri</td>
 <td>Oct. 13</td>
-<td></td>
-<td></td>
+<td>Topic 3. Dealing with heterogeneity</td>
+<td>Tad</td>
 <td></td>
 </tr>
 <tr class="even">
 <td>4</td>
 <td>Mon</td>
 <td>Oct. 16</td>
-<td></td>
-<td></td>
+<td>Topic 4. Mixed-effects models with nested data</td>
+<td>Tad</td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Wed</td>
 <td>Oct. 18</td>
-<td></td>
-<td></td>
+<td>Topic 5. GLM with binary &amp; proportional data</td>
+<td>Tad</td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Fri</td>
 <td>Oct. 20</td>
-<td></td>
-<td></td>
+<td>Topic 6. GLM with zero-inflated data</td>
+<td>Tad</td>
 <td></td>
 </tr>
 <tr class="odd">
 <td>5</td>
 <td>Mon</td>
 <td>Oct. 23</td>
-<td></td>
-<td></td>
+<td>Topic 7. Bayesian linear models</td>
+<td>Jes</td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Wed</td>
 <td>Oct. 25</td>
-<td></td>
-<td></td>
+<td>Topic 8. Bayesian hierarchical models</td>
+<td>Jes</td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Fri</td>
 <td>Oct. 27</td>
-<td></td>
-<td></td>
+<td>Topic 9. Bayesian non-linear models</td>
+<td>Jes</td>
 <td></td>
 </tr>
 <tr class="even">
 <td>6</td>
 <td>Mon</td>
 <td>Oct. 30</td>
-<td></td>
-<td></td>
+<td>Topic 10. Unconstrained ordination</td>
+<td>Tad</td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Wed</td>
 <td>Nov. 1</td>
-<td></td>
-<td></td>
+<td>Topic 11. Constrained ordination</td>
+<td>Tad</td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Fri</td>
 <td>Nov. 3</td>
-<td></td>
-<td></td>
+<td>Topic 12. Comparing multivariate data</td>
+<td>Jes</td>
 <td></td>
 </tr>
 <tr class="odd">
 <td>7</td>
 <td>Mon</td>
 <td>Nov. 6</td>
-<td></td>
+<td>Mid-term project presentation &amp; discussion</td>
 <td></td>
 <td></td>
 </tr>
@@ -672,7 +672,7 @@ div.tocify {
 <td></td>
 <td>Wed</td>
 <td>Nov. 8</td>
-<td></td>
+<td>Mid-term project presentation &amp; discussion</td>
 <td></td>
 <td></td>
 </tr>
@@ -680,7 +680,7 @@ div.tocify {
 <td></td>
 <td>Fri</td>
 <td>Nov. 10</td>
-<td></td>
+<td>Mid-term project presentation &amp; discussion</td>
 <td></td>
 <td></td>
 </tr>
@@ -688,24 +688,24 @@ div.tocify {
 <td>8</td>
 <td>Mon</td>
 <td>Nov. 13</td>
-<td></td>
-<td></td>
+<td>Topic 13. Spatial analysis, Zuur et al. approach</td>
+<td>Tad</td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Wed</td>
 <td>Nov. 15</td>
-<td></td>
-<td></td>
+<td>Topic 14. Spatial analysis, Borcard et al. approach</td>
+<td>Jes</td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Fri</td>
 <td>Nov. 17</td>
-<td></td>
-<td></td>
+<td>Topic 15. Spatial analysis, Bayesian approach</td>
+<td>Jes</td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -720,7 +720,7 @@ div.tocify {
 <td>9</td>
 <td>Mon</td>
 <td>Nov. 27</td>
-<td></td>
+<td>Topic 16. To be selected by class</td>
 <td></td>
 <td></td>
 </tr>
@@ -728,7 +728,7 @@ div.tocify {
 <td></td>
 <td>Wed</td>
 <td>Nov. 29</td>
-<td></td>
+<td>Topic 16. To be selected by class</td>
 <td></td>
 <td></td>
 </tr>
@@ -736,7 +736,7 @@ div.tocify {
 <td></td>
 <td>Fri</td>
 <td>Dec. 1</td>
-<td></td>
+<td>Topic 16. To be selected by class</td>
 <td></td>
 <td></td>
 </tr>
