--- a/00-computer-setup.html
+++ b/00-computer-setup.html
@@ -542,7 +542,7 @@ div.tocify {
 </div>
 <div id="editing-the-course-website" class="section level3">
 <h3>Editing the Course Website</h3>
-<p>The course website can be edited by changing the html files in the course GitHub repository located at <a href="https://github.com/jescoyle/BIO202" class="uri">https://github.com/jescoyle/BIO202</a>.</p>
+<p>The course website can be edited by changing the html files in the course GitHub repository located at <a href="https://github.com/FukamiLab/BIO202" class="uri">https://github.com/FukamiLab/BIO202</a>.</p>
 <div id="if-you-dont-want-to-work-with-git" class="section level4">
 <h4>If you don’t want to work with git</h4>
 <ol style="list-style-type: decimal">
@@ -558,18 +558,24 @@ div.tocify {
 <h4>If you are new to git, but want to learn</h4>
 <p>See the section below on installing git on your computer.</p>
 <p>Attend the git tutorial provided at the beginning of class.</p>
-<p>Use the ‘If yu are familiar with git’ workflow below to make changes to the course website.</p>
+<p>Use the ‘If you are familiar with git’ workflow below to make changes to the course website.</p>
 </div>
 <div id="if-you-are-familiar-with-git" class="section level4">
 <h4>If you are familiar with git</h4>
 <p>The general workflow is:</p>
 <ol style="list-style-type: decimal">
-<li>If you have not aready done so, fork the repository to your account and clone a local copy on your computer. <a href="">Instructions</a>. This only needs to be done once.</li>
-<li>Make sure your copy is up to date.</li>
-<li>Work on the .Rmd file for your lesson in R Studio. Click ‘Knit’ to render your changes as an html file and view them in your browser. Note that any edits you make are only on your computer until you submit a pull request to merge your changes to the repository.</li>
-<li>Use <code>git commit -m &quot;changes you made&quot;</code> to save your changes to your local repository.</li>
-<li>Use <code>git push origin master</code> to push your local changes to your fork on your account.</li>
-<li>Submit a pull request on GitHub to merge your changes with the original BIO202 repository no later than 8 am on the day you present.</li>
+<li>If you have not aready done so, fork the repository from <a href="https://github.com/FukamiLab/BIO202" class="uri">https://github.com/FukamiLab/BIO202</a> to your account on GitHub. Then clone a local copy of this forked repository (from your own GitHub account) to your computer. <a href="">Instructions</a>. This only needs to be done once.</li>
+<li>Before you start working:</li>
+</ol>
+<ul>
+<li>Make sure your copy is up to date with the FukamiLab repository on GitHub. If not, submit a Pull request to update it. <a href="">Instructions</a></li>
+<li>Make sure your local repository on your computer is up to date with your fork of the repository on your GitHub account using <code>git pull</code>.</li>
+</ul>
+<ol start="3" style="list-style-type: decimal">
+<li>Work on the .Rmd file for your lesson in R Studio on your computer. Click ‘Knit’ to render your changes as an html file and view them in your browser. Note that any edits you make are only on your computer until you submit a pull request to merge your changes to the repository. Make sure that when you have made your last edit to the .Rmd file you click ‘Knit’ so that an up-to-date html file is generated. The html file will be the one that appears on the website.</li>
+<li>Commit the changes you make periodically to your local repository using <code>git commit -m &quot;changes you made&quot;</code>.</li>
+<li>When you are finished, push the commits from your local repository to your fork on your GitHub account using <code>git push origin master</code>.</li>
+<li>Submit a pull request on GitHub to merge the changes on your fork with the original BIO202 repository on FukamiLab no later than 8 am on the day you present. Jes or Tad will approve your pull request.</li>
 </ol>
 </div>
 </div>
