Just test edited for practice with Jes

--- a/03-A-data-exploration.html
+++ b/03-A-data-exploration.html
@@ -546,6 +546,7 @@ div.tocify {
 </blockquote>
 <div id="key-points" class="section level2">
 <h2>Key Points</h2>
+<p>Test editing</p>
 <p>The instructor will fill in a description of the topic here followed by a bulleted list describing key features of the statistical analysis method. For example:</p>
 <ul>
 <li>When to use this analysis</li>
@@ -602,7 +603,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
