Fixed reference to git lesson page.

--- a/00-computer-setup.html
+++ b/00-computer-setup.html
@@ -571,7 +571,7 @@ div.tocify {
 <h4>If you are new to git, but want to learn</h4>
 <ol style="list-style-type: decimal">
 <li>Install Git on your computer using the instructions in the section below.</li>
-<li>Attend the Git tutorial during class on Monday Oct 2nd (week 2).</li>
+<li>Attend the Git tutorial during class on Wednesday, October 4th (week 2).</li>
 <li>Use the ‘If you are familiar with git’ workflow below to make changes to the course website.</li>
 </ol>
 </div>
@@ -579,10 +579,10 @@ div.tocify {
 <h4>If you are familiar with git</h4>
 <p>The general workflow is:</p>
 <ol style="list-style-type: decimal">
-<li>If you have not aready done so, fork the repository from <a href="https://github.com/FukamiLab/BIO202" class="uri">https://github.com/FukamiLab/BIO202</a> to your account on GitHub. Then clone a local copy of this forked repository (from your own GitHub account) to your computer. <a href="">Instructions</a>. This only needs to be done once.</li>
+<li>If you have not aready done so, fork the repository from <a href="https://github.com/FukamiLab/BIO202" class="uri">https://github.com/FukamiLab/BIO202</a> to your account on GitHub. Then clone a local copy of this forked repository (from your own GitHub account) to your computer. This only needs to be done once.</li>
 <li>Before you start working:
 <ul>
-<li>Make sure your copy is up to date with the FukamiLab repository on GitHub. If not, submit a Pull request to update it. <a href="">Instructions</a></li>
+<li>Make sure your copy is up to date with the FukamiLab repository on GitHub. If not, submit a Pull request to update it.</li>
 <li>Make sure your local repository on your computer is up to date with your fork of the repository on your GitHub account using <code>git pull</code>.</li>
 </ul></li>
 <li>Work on the .Rmd file for your lesson in R Studio on your computer. Click ‘Knit’ to render your changes as an html file and view them in your browser. Note that any edits you make are only on your computer until you submit a pull request to merge your changes to the repository. Make sure that when you have made your last edit to the .Rmd file you click ‘Knit’ so that an up-to-date html file is generated. The html file will be the one that appears on the website.</li>
@@ -590,6 +590,7 @@ div.tocify {
 <li>When you are finished, push the commits from your local repository to your fork on your GitHub account using <code>git push origin master</code>.</li>
 <li>Submit a pull request on GitHub to merge the changes on your fork with the original BIO202 repository on FukamiLab no later than 8 am on the day you present. Jes or Tad will approve your pull request.</li>
 </ol>
+<p><em>If you are not sure how to do any of the steps listed above, you can find instructions on the <a href="02-B-git-intro.html">lesson page</a> for Wednesday, October 4th.</em></p>
 <hr />
 </div>
 </div>
