Fixed order of R and git workshops in schedule.

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@ div.tocify {
 <td>2</td>
 <td>Mon</td>
 <td>Oct. 2</td>
-<td>Intro to GitHub &amp; git (optional)</td>
+<td>R workshop (optional)</td>
 <td>Jes</td>
 <td>XXX</td>
 </tr>
@@ -564,7 +564,7 @@ div.tocify {
 <td></td>
 <td>Wed</td>
 <td>Oct. 4</td>
-<td>R workshop</td>
+<td>Intro to GitHub &amp; git (optional)</td>
 <td>Jes</td>
 <td>XXX</td>
 </tr>
