Fixed last exercise so that it asks students to discover that rendering the document creates a new folder for images.

--- a/01-B-Rmarkdown-intro.html
+++ b/01-B-Rmarkdown-intro.html
@@ -658,7 +658,7 @@ my_kg &lt;-<span class="st"> </span>my_lbs *<span class="st"> </span><span class
 <p><strong>Exercise:</strong></p>
 <ol style="list-style-type: decimal">
 <li>Download the 00-example-lesson.Rmd file from the course website GitHub repository.</li>
-<li>Try to render the .Rmd file to html. Why didn’t it work? Try to fix the problem.</li>
+<li>Render the .Rmd file to html. Did it work? Look in the folder where you saved the 00-example.lesson.Rmd file. What has changed?</li>
 <li>Add a new section to the document with markdown-formatted text and a new R code chunk. Render the document again.</li>
 <li>Open the html file with your web browser to see what your changes would look like online. How does what you see differ from what is shown at <a href="https://fukamilab.github.io/BIO202/00-example-lesson.html" class="uri">https://fukamilab.github.io/BIO202/00-example-lesson.html</a></li>
 </ol>
