Adding pages for missing lessons in weeks 1 and 2. Reformatting headings for consistency.

--- a/03-C-heterogeneity.html
+++ b/03-C-heterogeneity.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Tad" />
 
 
-<title>Data Exploration</title>
+<title>Linear Models</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -491,7 +491,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Data Exploration</h1>
+<h1 class="title toc-ignore">Linear Models</h1>
 <h4 class="author"><em>Tad</em></h4>
 
 </div>
@@ -499,7 +499,7 @@ div.tocify {
 
 <p><strong>Assigned Reading:</strong></p>
 <blockquote>
-<p>Zuur, A. F. 2010. <em>A protocol for data exploration to avoid common statistical problems.</em> Methods in Ecology and Evolution <strong>1</strong>: 3-14. DOI: <a href="http://dx.doi.org/10.1111/j.2041-210X.2009.00001.x">10.1111/j.2041-210X.2009.00001.x</a></p>
+<p>Chapter 4 from: Zuur, A. F., Ieno, E. N., Walker, N., Saveliev, A. A. and Smith, G. M. 2009. <em>Mixed Effects Models and Extensions in Ecology with R.</em> Springer. <a href="https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-0-387-87458-6">link</a></p>
 </blockquote>
 <div id="key-points" class="section level3">
 <h3>Key Points</h3>
