--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ div.tocify {
       <a href="03-A-data-exploration.html">Data exploration</a>
     </li>
     <li>
-      <a href="03-B-topic-name.html">Linear models</a>
+      <a href="03-B-linear-models.html">Linear models</a>
     </li>
     <li>
       <a href="03-C-topic-name.html">Heterogeneity</a>
@@ -540,7 +540,7 @@ div.tocify {
 <td></td>
 <td>Wed</td>
 <td>Sept. 27</td>
-<td>Topic selection, <a href="01-B-Rmarkdown.html">Intro to R markdown</a> &amp; class website</td>
+<td>Topic selection, <a href="01-B-Rmarkdown-intro.html">Intro to R markdown</a> &amp; class website</td>
 <td>Jes</td>
 <td>XXX</td>
 </tr>
