--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ div.tocify {
       <a href="03-B-linear-models.html">Linear models</a>
     </li>
     <li>
-      <a href="03-C-topic-name.html">Heterogeneity</a>
+      <a href="03-C-heterogeneity.html">Heterogeneity</a>
     </li>
   </ul>
 </li>
@@ -349,13 +349,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="05-A-topic-name.html">Bayesian linear models</a>
+      <a href="05-A-Bayesian-linear-models.html">Bayesian linear models</a>
     </li>
     <li>
-      <a href="05-B-topic-name.html">Bayesian hierarchical models</a>
+      <a href="05-B-Bayesian-priors.html">Bayesian inference with prior information</a>
     </li>
     <li>
-      <a href="05-C-topic-name.html">Bayesian non-linear models</a>
+      <a href="05-C-Advanced-bayesian-example.html">Advanced Bayesian model example</a>
     </li>
   </ul>
 </li>
@@ -517,6 +517,14 @@ div.tocify {
 <div id="tentative-schedule" class="section level2">
 <h2>Tentative Schedule</h2>
 <table>
+<colgroup>
+<col width="5%" />
+<col width="4%" />
+<col width="8%" />
+<col width="63%" />
+<col width="9%" />
+<col width="9%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th>Week</th>
@@ -534,31 +542,31 @@ div.tocify {
 <td>Sept. 25</td>
 <td><a href="01-A-R-intro.html">Intro to R &amp; RStudio</a></td>
 <td>Tad &amp; Jes</td>
-<td>XXX</td>
+<td>————</td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Wed</td>
 <td>Sept. 27</td>
 <td>Topic selection, <a href="01-B-Rmarkdown-intro.html">Intro to R markdown</a> &amp; class website</td>
-<td>Jes</td>
-<td>XXX</td>
+<td>Tad &amp; Jes</td>
+<td>————</td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Fri</td>
 <td>Sept. 29</td>
-<td>Intro to ggplot2</td>
+<td><a href="01-C-ggplot2-into.html">Intro to ggplot2</a></td>
 <td>Jes</td>
-<td>XXX</td>
+<td>————</td>
 </tr>
 <tr class="even">
 <td>2</td>
 <td>Mon</td>
 <td>Oct. 2</td>
-<td>R workshop (optional)</td>
+<td><a href="02-A-R-workshop.html">R workshop</a> (optional)</td>
 <td>Jes</td>
-<td>XXX</td>
+<td>————</td>
 </tr>
 <tr class="odd">
 <td></td>
@@ -566,21 +574,21 @@ div.tocify {
 <td>Oct. 4</td>
 <td><a href="02-B-git-intro.html">Intro to GitHub &amp; git</a> (optional)</td>
 <td>Jes</td>
-<td>XXX</td>
+<td>————</td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Fri</td>
 <td>Oct. 6</td>
 <td>Each person introduces their questions &amp; data</td>
-<td></td>
-<td>XXX</td>
+<td>Tad &amp; Jes</td>
+<td>————</td>
 </tr>
 <tr class="odd">
 <td>3</td>
 <td>Mon</td>
 <td>Oct. 9</td>
-<td>Topic 1. Data exploration</td>
+<td>Topic 1. <a href="03-A-data-exploration.html">Data exploration</a></td>
 <td>Tad</td>
 <td></td>
 </tr>
@@ -588,7 +596,7 @@ div.tocify {
 <td></td>
 <td>Wed</td>
 <td>Oct. 11</td>
-<td>Topic 2. Linear models</td>
+<td>Topic 2. <a href="03-B-linear-models.html">Linear models</a></td>
 <td>Tad</td>
 <td></td>
 </tr>
@@ -596,7 +604,7 @@ div.tocify {
 <td></td>
 <td>Fri</td>
 <td>Oct. 13</td>
-<td>Topic 3. Dealing with heterogeneity</td>
+<td>Topic 3. <a href="03-C-heterogeneity.html">Dealing with heterogeneity</a></td>
 <td>Tad</td>
 <td></td>
 </tr>
@@ -628,7 +636,7 @@ div.tocify {
 <td>5</td>
 <td>Mon</td>
 <td>Oct. 23</td>
-<td>Topic 7. Bayesian linear models</td>
+<td>Topic 7. <a href="05-A-Bayesian-linear-models.html">Bayesian linear models</a></td>
 <td>Jes</td>
 <td></td>
 </tr>
@@ -636,7 +644,7 @@ div.tocify {
 <td></td>
 <td>Wed</td>
 <td>Oct. 25</td>
-<td>Topic 8. Bayesian hierarchical models</td>
+<td>Topic 8. <a href="05-B-Bayesian-priors.html">Bayesian inference with prior information</a></td>
 <td>Jes</td>
 <td></td>
 </tr>
@@ -644,7 +652,7 @@ div.tocify {
 <td></td>
 <td>Fri</td>
 <td>Oct. 27</td>
-<td>Topic 9. Bayesian non-linear models</td>
+<td>Topic 9. <a href="05-C-Advanced-bayesian-example.html">Advanced Bayesian model example</a></td>
 <td>Jes</td>
 <td></td>
 </tr>
@@ -653,7 +661,7 @@ div.tocify {
 <td>Mon</td>
 <td>Oct. 30</td>
 <td>Topic 10. Unconstrained ordination</td>
-<td>Tad</td>
+<td>Jes</td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -661,7 +669,7 @@ div.tocify {
 <td>Wed</td>
 <td>Nov. 1</td>
 <td>Topic 11. Constrained ordination</td>
-<td>Tad</td>
+<td>Jes</td>
 <td></td>
 </tr>
 <tr class="even">
@@ -787,20 +795,30 @@ div.tocify {
 </div>
 <div id="references-readings" class="section level2">
 <h2>References &amp; Readings</h2>
+<div id="assigned-readings" class="section level3">
+<h3>Assigned Readings</h3>
+<p>All assigned readings can be obtained for free through Stanford library online resources.</p>
 <ul>
 <li>Beale, C. M., Lennon, J. J., Yearsley, J. M., Brewer, M. J. and Elston, D. A. (2010), <em>Regression analysis of spatial data</em>. Ecology Letters, 13: 246–264. <a href="DOI:%5B10.1111/j.1461-0248.2009.01422.x%5D(http://dx.doi.org/10.1111/j.1461-0248.2009.01422.x)" class="uri">DOI:[10.1111/j.1461-0248.2009.01422.x](http://dx.doi.org/10.1111/j.1461-0248.2009.01422.x)</a></li>
 <li>Borcard, D., Gillet, F. and Legendre, P. (2011), <em>Numerical Ecology with R.</em> Springer. <a href="https://link.springer.com/book/10.1007/978-1-4419-7976-6">Stanford Full Text</a></li>
-<li>Dalgaard, P. (2008), <em>Introductory Statistics with R</em>. Springer. <a href="https://link.springer.com/book/10.1007/978-0-387-79054-1">Stanford Full Text</a></li>
+<li>Korner-Nievergelt et al. (2015), <em>Bayesian data analysis in ecology using linear models with R, BUGS, and Stan.</em> Elsevier. <a href="http://www.sciencedirect.com/science/book/9780128013700">Stanford Full Text</a></li>
 <li>Martin, T. G., Wintle, B. A., Rhodes, J. R., Kuhnert, P. M., Field, S. A., Low-Choy, S. J., Tyre, A. J. and Possingham, H. P. (2005), <em>Zero tolerance ecology: improving ecological inference by modelling the source of zero observations</em>. Ecology Letters, 8: 1235–1246. <a href="DOI:%5B10.1111/j.1461-0248.2005.00826.x%5D(http://dx.doi.org/10.1111/j.1461-0248.2005.00826.x)" class="uri">DOI:[10.1111/j.1461-0248.2005.00826.x](http://dx.doi.org/10.1111/j.1461-0248.2005.00826.x)</a></li>
-<li>McElreath, R. (2016), <em>Statistical rethinking: a Bayesian course with examples in R and Stan</em>. CRC Press. <em>Available in the Science and Marine libraries</em> <a href="http://xcelab.net/rm/statistical-rethinking/">Author’s website</a></li>
 <li>Ramette, A. (2007), <em>Multivariate analyses in microbial ecology</em>. FEMS Microbiology Ecology, 62: 142–160. DOI: <a href="http:dx.doi.org/10.1111/j.1574-6941.2007.00375.x">10.1111/j.1574-6941.2007.00375.x</a></li>
-<li>Stone, J. V. (2016), <em>Bayes’ rule with R: a tutorial introduction to Bayesian analysis</em>. Sebtel Press.</li>
-<li>Venables, W. N., Smith, D. M. and the R Core Team. (2012), <em>An Introduction to R: Notes on R: A Programming Environment for Data Analysis and Graphics</em>. Version 2.15.1. <a href="https://cran.r-project.org/doc/manuals/r-release/R-intro.pdf">full text</a></li>
 <li>Wagner, H. H. and Fortin, M.-J. (2005), <em>Spatial analysis of landscapes: concepts and statistics</em>. Ecology, 86: 1975–1987. DOI: <a href="http://dx.doi.org/10.1890/04-0914">10.1890/04-0914</a></li>
-<li>Wickham, H. (2009), <em>ggplot2: Elegant Graphics for Data Analysis</em>. Springer. <a href="https://link.springer.com/book/10.1007%2F978-0-387-98141-3">Stanford Full Text</a></li>
+<li>Wickham, H. (2016), <em>ggplot2: Elegant Graphics for Data Analysis</em>. Springer. <a href="https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-3-319-24277-4">Stanford Full Text</a></li>
 <li>Zuur, A. F., Leno, E. N., Walker, N., Savliev, A. A. and Smith, G. M. (2009), <em>Mixed Effect Models and Extensions in Ecology with R.</em> Springer. <a href="https://link.springer.com/book/10.1007%2F978-0-387-87458-6">Stanford Full Text</a></li>
 <li>Zuur, A. F. (2010), <em>A protocol for data exploration to avoid common statistical problems.</em> Methods in Ecology and Evolution <strong>1</strong>: 3-14. DOI: <a href="http://dx.doi.org/10.1111/j.2041-210X.2009.00001.x">10.1111/j.2041-210X.2009.00001.x</a></li>
 </ul>
+</div>
+<div id="addional-suggested-references" class="section level3">
+<h3>Addional Suggested References</h3>
+<ul>
+<li>Legendre, P. and L. Legendre. (2012), <em>Numerical Ecology</em>. Elsevier. <a href="http://www.sciencedirect.com/science/bookseries/01678892/24">Stanford Full Text</a></li>
+<li>McElreath, R. (2016), <em>Statistical rethinking: a Bayesian course with examples in R and Stan</em>. CRC Press. <em>Available in the Science and Marine libraries</em> <a href="http://xcelab.net/rm/statistical-rethinking/">Author’s website</a></li>
+<li>Venables, W. N., Smith, D. M. and the R Core Team. (2012), <em>An Introduction to R: Notes on R: A Programming Environment for Data Analysis and Graphics</em>. Version 2.15.1. <a href="https://cran.r-project.org/doc/manuals/r-release/R-intro.pdf">full text</a></li>
+<li>Zuur, A. F., J. M. Hilbe and E. N. Ieno. (2013), *A beginner’s guide to GLM and GLMM with R: a frequentist and Bayesian perspective for ecologists. Highland Statistics Ltd. <a href="https://searchworks.stanford.edu/view/11749213">Stanford Library Record</a></li>
+</ul>
+</div>
 </div>
 
 
