Swapped optional R workshop and intro to ggplot2 lessons.

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ div.tocify {
       <a href="01-B-Rmarkdown-intro.html">R markdown</a>
     </li>
     <li>
-      <a href="01-C-ggplot2-intro.html">ggplot2</a>
+      <a href="01-C-R-workshop.html">R workshop</a>
     </li>
   </ul>
 </li>
@@ -298,7 +298,7 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="02-A-R-workshop.html">R workshop</a>
+      <a href="02-A-tidyr.html">ggplot2 and tidyr</a>
     </li>
     <li>
       <a href="02-B-git-intro.html">Intro to git</a>
@@ -556,7 +556,7 @@ div.tocify {
 <td></td>
 <td>Fri</td>
 <td>Sept. 29</td>
-<td><a href="01-C-ggplot2-into.html">Intro to ggplot2</a></td>
+<td><a href="01-C-R-workshop.html">R workshop</a> (optional)</td>
 <td>Jes</td>
 <td>————</td>
 </tr>
@@ -564,7 +564,7 @@ div.tocify {
 <td>2</td>
 <td>Mon</td>
 <td>Oct. 2</td>
-<td><a href="02-A-R-workshop.html">R workshop</a> (optional)</td>
+<td><a href="02-A-tidyr.html">Intro to ggplot2 and tidyr</a> (optional)</td>
 <td>Jes</td>
 <td>————</td>
 </tr>
@@ -810,8 +810,8 @@ div.tocify {
 <li>Zuur, A. F. (2010), <em>A protocol for data exploration to avoid common statistical problems.</em> Methods in Ecology and Evolution <strong>1</strong>: 3-14. DOI: <a href="http://dx.doi.org/10.1111/j.2041-210X.2009.00001.x">10.1111/j.2041-210X.2009.00001.x</a></li>
 </ul>
 </div>
-<div id="addional-suggested-references" class="section level3">
-<h3>Addional Suggested References</h3>
+<div id="additional-suggested-references" class="section level3">
+<h3>Additional Suggested References</h3>
 <ul>
 <li>Legendre, P. and L. Legendre. (2012), <em>Numerical Ecology</em>. Elsevier. <a href="http://www.sciencedirect.com/science/bookseries/01678892/24">Stanford Full Text</a></li>
 <li>McElreath, R. (2016), <em>Statistical rethinking: a Bayesian course with examples in R and Stan</em>. CRC Press. <em>Available in the Science and Marine libraries</em> <a href="http://xcelab.net/rm/statistical-rethinking/">Author’s website</a></li>
