Completed Intro to R lesson by referencing Data Carpentry lesson materials.

--- a/01-C-R-workshop.html
+++ b/01-C-R-workshop.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Jes" />
 
 
-<title>Practice with R</title>
+<title>Introduction to R</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -286,7 +286,7 @@ div.tocify {
       <a href="01-B-Rmarkdown-intro.html">R markdown</a>
     </li>
     <li>
-      <a href="01-C-ggplot2-intro.html">ggplot2</a>
+      <a href="01-C-R-workshop.html">R workshop</a>
     </li>
   </ul>
 </li>
@@ -298,7 +298,7 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="02-A-R-workshop.html">R workshop</a>
+      <a href="02-A-tidyr.html">ggplot2 and tidyr</a>
     </li>
     <li>
       <a href="02-B-git-intro.html">Intro to git</a>
@@ -316,10 +316,10 @@ div.tocify {
       <a href="03-A-data-exploration.html">Data exploration</a>
     </li>
     <li>
-      <a href="03-B-topic-name.html">Linear models</a>
+      <a href="03-B-linear-models.html">Linear models</a>
     </li>
     <li>
-      <a href="03-C-topic-name.html">Heterogeneity</a>
+      <a href="03-C-heterogeneity.html">Heterogeneity</a>
     </li>
   </ul>
 </li>
@@ -349,13 +349,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="05-A-topic-name.html">Bayesian linear models</a>
+      <a href="05-A-Bayesian-linear-models.html">Bayesian linear models</a>
     </li>
     <li>
-      <a href="05-B-topic-name.html">Bayesian hierarchical models</a>
+      <a href="05-B-Bayesian-priors.html">Bayesian inference with prior information</a>
     </li>
     <li>
-      <a href="05-C-topic-name.html">Bayesian non-linear models</a>
+      <a href="05-C-Advanced-bayesian-example.html">Advanced Bayesian model example</a>
     </li>
   </ul>
 </li>
@@ -491,20 +491,20 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Practice with R</h1>
+<h1 class="title toc-ignore">Introduction to R</h1>
 <h4 class="author"><em>Jes</em></h4>
 
 </div>
 
 
-<div id="key-points" class="section level3">
-<h3>Key Points</h3>
-</div>
-<div id="analysis-example" class="section level3">
-<h3>Analysis Example</h3>
-</div>
-<div id="discussion-questions" class="section level3">
-<h3>Discussion Questions</h3>
+<p><strong>Suggested Reading:</strong></p>
+<blockquote>
+<p>Chapter 2 in Korner-Nievergelt et al. 2015. <em>Bayesian data analysis in ecology using linear models with R, BUGS, and Stan.</em> Elsevier. <a href="http://www.sciencedirect.com/science/book/9780128013700">link</a></p>
+</blockquote>
+<p>Today’s class is an optional session for students who are new to R or who want a more formal introduction to R’s terminology and data structures.</p>
+<div id="lesson-materials" class="section level3">
+<h3>Lesson Materials</h3>
+<p>We will be working through the Data Carpentry ecology lessons <a href="http://www.datacarpentry.org/R-ecology-lesson/01-intro-to-r.html">Introduction to R</a> and <a href="http://www.datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with data</a>. Rather than reproduce the lesson materials here, you can find them at the links listed above.</p>
 </div>
 
 
